<resources>
    <string name="app_name">ARMAN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="authorization">Authorization</string>


    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="fir_submitted">FIR Submitted</string>
    <string name="sos_alert">SOS Alert</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="disaster_app">Disaster App</string>
    <string name="username">Username</string>
    <string name="title_activity_maps">Map</string>


    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="ok">ok</string>
    <string name="accident_reporting_managent_applictaion"><![CDATA[Accident Reporting & Management Application]]></string>




    <string name="font_sign_in">&#xf090;</string>
    <string name="todo">TODO</string>
</resources>
